syntax = "proto3";

package dill;

// Retrieves the specified count of words, consisting of
// count - 1 adjectives and a noun. If signed is specified,
// the response includes a timestamp and signature.
service PickWords {
    rpc GetWords(WordsRequest) returns (WordsResponse);
}

// Attaches a timestamp and signature to the words provided.
service SignWords {
    rpc SignWords(SignRequest) returns (WordsResponse);
}

message SignRequest {
  repeated string words = 1;
}

message WordsRequest {
  uint32 count = 1;
  bool signed = 2;
}

message WordsResponse {
  repeated string words = 1;
  optional uint64 timestamp = 2;
  optional string signature = 3;
}
